objects/Match__c.object
<CustomObject>
    <description>Soccer match</description>
    <fields>
        <fullName>Days_Left__c</fullName>
        <description>Days left before the beginning of the match</description>
        <formula>Start_DateTime__c  - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Match_Between_Teams_Datetime__c</fullName>
        <description>Represents the date and time of the previous match between those teams.</description>
        <label>Previous Match Between Teams Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Team__c.Total_Active_Players__c</field>
                <operation>greaterOrEqual</operation>
                <value>11</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Matches</relationshipLabel>
        <relationshipName>Matches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visitors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitors</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Гравців менше чим 11</errorMessage>
            <filterItems>
                <field>Team__c.Total_Active_Players__c</field>
                <operation>greaterOrEqual</operation>
                <value>11</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Matches (Visitors)</relationshipLabel>
        <relationshipName>Matches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winner__c</fullName>
        <formula>IF(VALUE(LEFT(Score__c, 1)) &gt; VALUE(RIGHT(Score__c, 1)),   Team__r.Name,  
 IF(VALUE(LEFT(Score__c, 1)) &lt; VALUE(RIGHT(Score__c, 1)),  Visitors__r.Name, &quot;Draw&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Winner</label>
        <type>Text</type>
    </fields>
    <label>Match</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Negative_Score</fullName>
        <active>true</active>
        <description>Validate scores in Score__c cannot be negative numbers</description>
        <errorConditionFormula>CONTAINS(Score__c , &quot;-&quot;)</errorConditionFormula>
        <errorDisplayField>Score__c</errorDisplayField>
        <errorMessage>Score cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Score_Format</fullName>
        <active>true</active>
        <errorConditionFormula>OR(NOT(CONTAINS( Score__c , &apos;:&apos;)), 

 REGEX( Score__c ,  &quot;[0-9]{3}&quot;) 

 )</errorConditionFormula>
        <errorMessage>Please use this format &quot;score1:score2&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateTime_past</fullName>
        <active>true</active>
        <description>Validate Match&apos;s StartDateTime__c cannot be in past for new Matches</description>
        <errorConditionFormula>Start_DateTime__c &lt;= now()</errorConditionFormula>
        <errorDisplayField>Start_DateTime__c</errorDisplayField>
        <errorMessage>Match&apos;s StartDateTime__c cannot be in past</errorMessage>
    </validationRules>
</CustomObject>